--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "npm run start:fullstack"
+startCommand = "npm run start:test"
 restartPolicyType = "always"
 
 [env]
